--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,11 +1,21 @@
 <web-app>
+
+<servlet>
+ <servlet-name>login</servlet-name>
+ <servlet-class>servlets.login</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ <servlet-name>login</servlet-name>
+ <url-pattern>/login</url-pattern>
+ </servlet-mapping>
+
  <servlet>
  <servlet-name>servlet1</servlet-name>
  <servlet-class>servlets.servlet1</servlet-class>
  </servlet>
  <servlet-mapping>
  <servlet-name>servlet1</servlet-name>
- <url-pattern>/login</url-pattern>
+ <url-pattern>/login1</url-pattern>
  </servlet-mapping>
  
  <servlet>
@@ -162,21 +172,73 @@
  </servlet-mapping>
 
 <servlet>
- <servlet-name>mgmt_logout</servlet-name>
- <servlet-class>servlets.mgmt_logout</servlet-class>
- </servlet>
- <servlet-mapping>
- <servlet-name>mgmt_logout</servlet-name>
- <url-pattern>/mgmt_logout</url-pattern>
- </servlet-mapping>
-
-<servlet>
- <servlet-name>stu_logout</servlet-name>
+ <servlet-name>sys_logout</servlet-name>
  <servlet-class>servlets.stu_logout</servlet-class>
  </servlet>
  <servlet-mapping>
- <servlet-name>stu_logout</servlet-name>
- <url-pattern>/stu_logout</url-pattern>
+ <servlet-name>sys_logout</servlet-name>
+ <url-pattern>/sys_logout</url-pattern>
  </servlet-mapping>
+
+
+<servlet>
+ <servlet-name>user_role_check</servlet-name>
+ <servlet-class>servlets.user_role_check</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ <servlet-name>user_role_check</servlet-name>
+ <url-pattern>/user_role_check</url-pattern>
+ </servlet-mapping>
+
+<security-constraint>
+    <web-resource-collection>
+         <web-resource-name>management</web-resource-name>
+         <url-pattern>/#/management</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+         <role-name>management</role-name>
+    </auth-constraint>
+</security-constraint>
+
+<security-role>
+    <role-name>management</role-name>
+</security-role>
+
+<security-constraint>
+    <web-resource-collection>
+         <web-resource-name>student</web-resource-name>
+         <url-pattern>/#/student</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+         <role-name>student</role-name>
+    </auth-constraint>
+</security-constraint>
+
+<security-role>
+    <role-name>student</role-name>
+</security-role>
+
+<security-constraint>
+    <web-resource-collection>
+         <web-resource-name>login-main</web-resource-name>
+         <url-pattern>/#/login-main</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+         <role-name>management</role-name>
+         <role-name>student</role-name>
+    </auth-constraint>
+</security-constraint>
+
+ 
+<login-config>
+     <auth-method>FORM</auth-method>
+     <realm-name>studentDB_ember</realm-name>
+     <form-login-config>
+          <form-login-page>/#/loginpage</form-login-page>
+          <form-error-page>/#/loginpage</form-error-page>
+     </form-login-config>
+</login-config>
+ 
+
 
 </web-app>
